--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in version 0.99.7:
+
+Formatted package for Bioconductor submission. No significant user-facing changes. 
       
 Changes in version 0.9.6:
 
